k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ppai
  labels:
    app.kubernetes.io/part-of: ppai
